--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -219,6 +219,7 @@
   "footer": {
     "color_key": "Code couleur",
     "privacy_policy": "Politique de confidentialité",
+    "terms": "Termes et conditions",
     "copyright": "Copyright 2018 Decentraland. Tous droits reservés."
   }
 }
