--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -221,5 +221,12 @@
     "privacy_policy": "Politique de Confidentialité",
     "terms": "Termes et Conditions",
     "copyright": "Copyright 2018 Decentraland. Tous droits reservés."
+  },
+  "homepage": {
+    "hero_title": "Choisissez votre emplacement idéal à Genesis City",
+    "hero_subtitle": "Marché décentralisé pour LAND. Zéro frais.",
+    "get_started": "Commencer",
+    "newest_lands": "Les plus récents LANDs",
+    "view_more": "Afficher plus"
   }
 }
