--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -56,6 +56,7 @@
   "publication": {
     "expired_at": "Expired {time} ago",
     "expires_in": "Expires in {time}",
+    "expires_in_more_than_years": "Expires in over {years} years",
     "view": "View",
     "sold": "Sold",
     "canceled": "Canceled"
@@ -80,8 +81,7 @@
     "publication": {
       "price": "Price",
       "time_left": "Time Left",
-      "buy": "Buy",
-      "more_than_years": "More than {years} years"
+      "buy": "Buy"
     },
     "owner": {
       "part_of": "Part of {name}",
