--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -2,7 +2,9 @@
   "languages": {
     "en": "English",
     "es": "Spanish",
-    "fr": "French"
+    "fr": "French",
+    "zh": "Chinese",
+    "ko": "Korean"
   },
   "global": {
     "atlas": "Atlas",
@@ -221,7 +223,7 @@
     "hero_title": "Choose your ideal location in Genesis City",
     "hero_subtitle": "Decentralized market for LAND. Zero fees.",
     "get_started": "Get Started",
-    "newest_lands": "Newest LANDs",
+    "newest_lands": "Newest LAND",
     "view_more": "View More"
   }
 }
