chore: updated translations

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -223,7 +223,7 @@
     "hero_title": "Choose your ideal location in Genesis City",
     "hero_subtitle": "Decentralized market for LAND. Zero fees.",
     "get_started": "Get Started",
-    "newest_lands": "Newest LAND",
+    "newest_lands": "Newest LANDs",
     "view_more": "View More"
   }
 }
