--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -19,13 +19,19 @@
     "cancel": "取消",
     "submit": "提交",
     "confirm": "确认",
+    "retry": "다시 해 보다",
+    "connect": "잇다",
     "authorized": "已授权",
     "unauthorized": "未授权",
     "wallet_address": "钱包地址",
     "for": "对于",
     "sign_in": "登录",
     "sign_in_notice": "您需要{登录}{sign_in_link}才能访问此页面",
-    "owned_by": "被{address_link}所有"
+    "owned_by": "拥有",
+    "owned_by_link": "{address_link} 소유"
+  },
+  "address": {
+    "its_you": "是你"
   },
   "navbar": {
     "my_land": "我的虚拟土地"
@@ -52,6 +58,7 @@
   "publication": {
     "expired_at": "已于{time}前过期",
     "expires_in": "将于{time}后到期",
+    "expires_in_more_than_years": "超过{years}年",
     "view": "查看",
     "sold": "已售出",
     "canceled": "已取消"
@@ -60,7 +67,9 @@
     "proposal": "提案"
   },
   "parcel": {
-    "view": "查看"
+    "view": "查看",
+    "no_name": "无名",
+    "no_description": "没有说明"
   },
   "parcel_detail": {
     "description": "描述",
@@ -104,8 +113,8 @@
     "approved_balance": "您的已批准MANA余额为{approved_balance}",
     "needs_at_least": "为了购买这块土地，您至少需要{value}MANA。",
     "didnt_approve": "您没有批准使用MANA",
-    "should_approve": "您需要先在虚拟市场批准使用MANA，才能购买虚拟土地。",
-    "please_approve": "请前往{设置页面}{settings_link}并批准更多MANA。"
+    "please_approve": "请前往{设置页面}{settings_link}并批准更多MANA。",
+    "total_balance": "您的余额是{balance}"
   },
   "parcel_publish": {
     "list_land": "待售虚拟土地上架",
@@ -119,22 +128,26 @@
       "您需要前往设置页面{settings_link}并授权虚拟市场以您的名义操作土地交易，然后才能将其上架出售。",
     "errors": {
       "minimum_expiration": "最短有效期限为一天",
-      "minimum_land": "最低的土地价格是{value} MANA"
+      "maximum_expiration": "最大到期日期是{date}",
+      "minimum_land_price": "最低的土地价格是{value} MANA",
+      "maximum_land_price": "最大的LAND价格是{值} MANA"
     }
   },
   "parcel_cancel": {
     "cancel_land": "取消土地出售",
     "currently_on_sale": "目前正以价格{value}出售。",
-    "about_to_cancel": "您即将取消这次销售。"
+    "about_to_cancel": "您即将取消这次销售。",
+    "not_for_sale": "不出售。",
+    "completed": "已完成"
   },
   "activity": {
     "no_activity": "您还没有活动。",
     "start": "您可以先在您的设置页面{settings_link}上批准一些MANA",
-    "pending": "待定",
-    "history": "历史"
+    "pending": "待定"
   },
   "transaction": {
     "approved": "您已批准{mana}MANA供{虚拟市场}{marketplace_contract_link}使用",
+    "disapproved": "您未经授权{marketplace_contract_link}以您的名义操作MANA",
     "authorize":
       "您已{action} {虚拟市场}{marketplace_contract_link}以您的名义操作土地",
     "edit":
@@ -144,9 +157,22 @@
     "buy": "您买入了{parcel_link}地块",
     "cancel": "您取消了{parcel_link}地块的{发布}{publication_link}"
   },
+  "transaction_status": {
+    "see_activity": "要查看您的交易记录，请访问您的{activity_link}。",
+    "text": {
+      "pending": "交易正在等待确认。",
+      "failed": "您的交易失败，您可以尝试发送新的交易。"
+    },
+    "parcel": {
+      "still_pending": "{parcel_name}仍然有{transactions_count}个待处理的交易。"
+    },
+    "idle": {
+      "please_confirm": "请确认交易"
+    }
+  },
   "settings": {
     "pending_tx": "您有待处理的交易",
-    "unapprove_mana_check": "如取消选中将批准0 MANA",
+    "disapprove_mana_check": "如取消选中将批准0 MANA",
     "approve_mana_check": "勾选以批准{mana_to_approve} MANA",
     "mana_approved": "您有{mana_approved} MANA批准被合约使用。",
     "approve_mana":
@@ -167,7 +193,13 @@
     "roads": "道路",
     "plaza": "广场",
     "unowned": "无主",
-    "loading": "加载中"
+    "loading": "加载中",
+    "on_sale": "出售"
+  },
+  "sign_in": {
+    "options":
+      "首先，你需要一个安全的地方来保存你的土地。您可以使用{metamask_link}扩展程序或像{ledger_nano_link}这样的硬件钱包。",
+    "account_unlocked": "确保您的帐户已解锁"
   },
   "footer": {
     "color_key": "色彩标记",
