--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -138,13 +138,13 @@
     "cancel_land": "取消土地出售",
     "currently_on_sale": "目前正以价格{value}出售。",
     "about_to_cancel": "您即将取消这次销售。",
-    "not_for_sale": "不出售。",
-    "completed": "已完成"
+    "not_for_sale": "不出售。"
   },
   "activity": {
     "no_activity": "您还没有活动。",
     "start": "您可以先在您的设置页面{settings_link}上批准一些MANA",
-    "pending": "待定"
+    "pending": "待定",
+    "completed": "已完成"
   },
   "transaction": {
     "approved": "您已批准{mana}MANA供{虚拟市场}{marketplace_contract_link}使用",
@@ -181,6 +181,9 @@
     "authorize_land_check": "勾选并授权虚拟市场合约的土地使用",
     "you_authorized": "您已授权{marketplace_contract_link}以您的名义操作LAND",
     "authorize": "授权{marketplace_contract_link}在您的行为中操作LAND"
+  },
+  "derivation_path": {
+    "supported": "我们暂时只支持以{paths}开头的路径"
   },
   "color_key": {
     "title": "色彩标记",
