feat: added Chinese and Korean (#122)
* feat: added Chinese and Korean

* chore: added and updated translation files

* feat: add a test to check translation keys

* chore: updated Korean

* chore: updated translations

* chore: updated translations

* chore: updated cn

* chore: updated translations after merge

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -2,7 +2,9 @@
   "languages": {
     "en": "English",
     "es": "Spanish",
-    "fr": "French"
+    "fr": "French",
+    "zh": "Chinese",
+    "ko": "Korean"
   },
   "global": {
     "atlas": "Atlas",
