feat: Added a link to the Atlas from the ParcelPreview in ParcelDetailPage

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -76,6 +76,7 @@
   "parcel_detail": {
     "description": "Description",
     "empty_description": "This parcel has no description",
+    "view": "View on Atlas",
     "actions": {
       "edit": "Edit",
       "transfer": "Transfer",
