--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -77,6 +77,7 @@
   "parcel_detail": {
     "description": "Description",
     "empty_description": "Cette parcelle n'a pas de description",
+    "view": "Voir sur Atlas",
     "actions": {
       "edit": "Edition",
       "transfer": "Transferer",
