--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -76,6 +76,7 @@
   "parcel_detail": {
     "description": "설명",
     "empty_description": "이 필지에는 설명이 없습니다",
+    "view": "아틀라스에서보기",
     "actions": {
       "edit": "편집",
       "transfer": "이전",
