chore: Added copyright symbol to footer

--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -228,7 +228,7 @@
     "color_key": "Mapa de Colores",
     "privacy_policy": "Política de Privacidad",
     "terms": "Términos & Condiciones",
-    "copyright": "Copyright 2018 Decentraland. Todos los derechos reservados."
+    "copyright": "© 2018 Decentraland. Todos los derechos reservados."
   },
   "homepage": {
     "hero_title": "Elige tu ubicación ideal en Genesis City",
