--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -232,7 +232,7 @@
     "color_key": "Code Couleur",
     "privacy_policy": "Politique de Confidentialité",
     "terms": "Termes et Conditions",
-    "copyright": "Copyright 2018 Decentraland. Tous droits reservés."
+    "copyright": "© 2018 Decentraland. Tous droits reservés."
   },
   "homepage": {
     "hero_title": "Choisissez votre emplacement idéal à Genesis City",
