--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -219,7 +219,7 @@
     "color_key": "색상 키",
     "privacy_policy": "개인 정보 정책",
     "terms": "이용 약관",
-    "copyright": "Copyright 2018 Decentraland. 판권 소유."
+    "copyright": "© 2018 Decentraland. 판권 소유."
   },
   "homepage": {
     "hero_title": "제네시스 시티에서 가장 이상적인 위치를 선택하시기 바랍니다.",
