--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -224,7 +224,7 @@
     "color_key": "Color Key",
     "privacy_policy": "Privacy Policy",
     "terms": "Terms & Conditions",
-    "copyright": "Copyright 2018 Decentraland. All rights reserved."
+    "copyright": "© 2018 Decentraland. All rights reserved."
   },
   "homepage": {
     "hero_title": "Choose your ideal location in Genesis City",
