--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -209,7 +209,7 @@
     "color_key": "色彩标记",
     "privacy_policy": "隐私政策",
     "terms": "条款和条件",
-    "copyright": "版权所有2018 Decentraland。保留所有权利。"
+    "copyright": "© 2018 Decentraland。保留所有权利。"
   },
   "homepage": {
     "hero_title": "在\"创世纪城\"中挑选你的梦想领地",
