--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -231,7 +231,7 @@
     "hero_title": "Choose your ideal location in Genesis City",
     "hero_subtitle": "Decentralized market for LAND. Zero fees.",
     "get_started": "Get Started",
-    "newest_lands": "Newest LANDs",
+    "newest_lands": "Newest LAND",
     "view_more": "View More"
   }
 }
