--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -229,7 +229,8 @@
     "color_key": "Mapa de Colores",
     "privacy_policy": "Política de Privacidad",
     "terms": "Términos & Condiciones",
-    "copyright": "© 2018 Decentraland. Todos los derechos reservados."
+    "copyright": "© 2018 Decentraland. Todos los derechos reservados.",
+    "mini_copyright": "© 2018 Decentraland."
   },
   "homepage": {
     "hero_title": "Elige tu ubicación ideal en Genesis City",
