--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -210,7 +210,8 @@
     "color_key": "色彩标记",
     "privacy_policy": "隐私政策",
     "terms": "条款和条件",
-    "copyright": "© 2018 Decentraland。保留所有权利。"
+    "copyright": "© 2018 Decentraland。保留所有权利。",
+    "mini_copyright": "© 2018 Decentraland."
   },
   "homepage": {
     "hero_title": "在\"创世纪城\"中挑选你的梦想领地",
