--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -225,13 +225,14 @@
     "color_key": "Color Key",
     "privacy_policy": "Privacy Policy",
     "terms": "Terms & Conditions",
-    "copyright": "© 2018 Decentraland. All rights reserved."
+    "copyright": "© 2018 Decentraland. All rights reserved.",
+    "mini_copyright": "© 2018 Decentraland."
   },
   "homepage": {
     "hero_title": "Choose your ideal location in Genesis City",
     "hero_subtitle": "Decentralized market for LAND. Zero fees.",
     "get_started": "Get Started",
-    "newest_lands": "Newest LANDs",
+    "newest_lands": "Newest LAND",
     "view_more": "View More"
   }
 }
