feat: Remove back button from color key page

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -212,8 +212,7 @@
     "plaza": "Plaza",
     "unowned": "Unowned",
     "loading": "Loading",
-    "on_sale": "On sale",
-    "go_back": "Go back"
+    "on_sale": "On sale"
   },
   "sign_in": {
     "options":
