--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -216,8 +216,7 @@
     "plaza": "Plaza",
     "unowned": "Sin dueño",
     "loading": "Cargando",
-    "on_sale": "En venta",
-    "go_back": "Volver"
+    "on_sale": "En venta"
   },
   "sign_in": {
     "options":
