--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -220,8 +220,7 @@
     "plaza": "Places",
     "unowned": "Libres",
     "loading": "Chargement",
-    "on_sale": "À vendre",
-    "go_back": "Retourner"
+    "on_sale": "À vendre"
   },
   "sign_in": {
     "options":
