--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -207,8 +207,7 @@
     "plaza": "광장",
     "unowned": "소유자가 없는",
     "loading": "로드 중",
-    "on_sale": "판매 중",
-    "go_back": "돌아 가라."
+    "on_sale": "판매 중"
   },
   "sign_in": {
     "options":
