--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -197,8 +197,7 @@
     "plaza": "广场",
     "unowned": "无主",
     "loading": "加载中",
-    "on_sale": "出售",
-    "go_back": "回去"
+    "on_sale": "出售"
   },
   "sign_in": {
     "options":
