--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -157,6 +157,7 @@
       "Has autorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
     "disapproved":
       "Has desautorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
+    "transfer_mana": "Has transferido {mana} MANA a {address_link}",
     "authorize":
       "Has {action} al {marketplace_contract_link} para operar LAND por tu cuenta.",
     "edit":
