--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -24,6 +24,7 @@
     "authorized": "Authorized",
     "unauthorized": "Unauthorized",
     "wallet_address": "Wallet address",
+    "balance": "Balance",
     "for": "for",
     "sign_in": "Sign In",
     "sign_in_notice": "You need to {sign_in_link} to access this page",
@@ -138,10 +139,9 @@
     }
   },
   "parcel_cancel": {
-    "cancel_land": "Cancel LAND Sale",
-    "currently_on_sale": "is currently on sale for {value}.",
-    "about_to_cancel": "You are about to cancel this sale.",
-    "not_for_sale": "is not for sale."
+    "cancel_land": "Cancel Sale",
+    "about_to_cancel": "You are about to cancel the sale of {parcel}.",
+    "not_for_sale": "The parcel {parcel} is not for sale."
   },
   "activity": {
     "no_activity": "You have no activity yet.",
@@ -196,7 +196,8 @@
     "you_authorized":
       "You have authorized the {marketplace_contract_link} to operate LAND on your behalf",
     "authorize":
-      "Authorize the {marketplace_contract_link} to operate LAND on your behalf"
+      "Authorize the {marketplace_contract_link} to operate LAND on your behalf",
+    "authorization": "Authorization"
   },
   "derivation_path": {
     "supported":
