--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -24,6 +24,7 @@
     "authorized": "허가",
     "unauthorized": "무단",
     "wallet_address": "지갑 주소",
+    "balance": "밸런스",
     "for": "에 대한",
     "sign_in": "로그인",
     "sign_in_notice": "이 페이지에 액세스하려면 {sign_in_link}해야합니다.",
@@ -192,7 +193,8 @@
     "authorize_land_check": "선택하면 시장 계약에 대한 토지 사용을 허가합니다",
     "you_authorized": "{marketplace_contract_link}을(를) 승인했습니다.",
     "authorize":
-      "{marketplace_contract_link}에게 귀하를 대신하여 토지를 운영하도록 승인하십시오."
+      "{marketplace_contract_link}에게 귀하를 대신하여 토지를 운영하도록 승인하십시오.",
+    "authorization": "권한 부여"
   },
   "derivation_path": {
     "supported": "당분간 {경로}로 시작하는 경로 만 지원합니다."
