--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -24,6 +24,7 @@
     "authorized": "已授权",
     "unauthorized": "未授权",
     "wallet_address": "钱包地址",
+    "balance": "平衡",
     "for": "对于",
     "sign_in": "登录",
     "sign_in_notice": "您需要{sign_in_link}才能访问此页面",
@@ -182,7 +183,8 @@
     "unauthorize_land_check": "取消勾选取消授权市场合约的虚拟土地使用",
     "authorize_land_check": "勾选并授权虚拟市场合约的土地使用",
     "you_authorized": "您已授权{marketplace_contract_link}以您的名义操作LAND",
-    "authorize": "授权{marketplace_contract_link}在您的行为中操作LAND"
+    "authorize": "授权{marketplace_contract_link}在您的行为中操作LAND",
+    "authorization": "授权"
   },
   "derivation_path": {
     "supported": "我们暂时只支持以{paths}开头的路径"
